@@ -1,7 +1,7 @@
 /*
 Theme Name: DarkElements
 Theme URI: https://www.guidovanderleest.nl/darkelements
-Version: 5.8
+Version: 5.9
 Author: Guido van der Leest
 Author URI: https://www.guidovanderleest.nl
 Description: DarkElements is a free, clean, minimalistic, responsive, mobile-friendly WordPress theme. Features: sidebar, sidebar navigation, footer widgets, custom header image, custom background, custom logo to replace site title and tagline. For more info please check readme file. Enjoy.
@@ -303,15 +303,11 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 	/* MAIN CONTENT AREA */
 	#content {width:100%; clear:both; float:left; padding:10px 0 20px; background:none;}
 
-	/* HEADINGS */
-	h1 {font-size:1.75em;}
-
 	/* SIDEBAR */
 	#sidebar {width:100%; clear:both; padding:0; background:none;}
 
 	/* SIDEBAR LOGO */
 	.logo {padding:10px 0 20px;}
-	.logo h1 {font-size:2em;}
 	.logo h2 {padding:0; font-size:1.45em;}
 	.logo img {padding:0;}
 
