@@ -1,6 +1,10 @@
 CHANGELOG
 =========
 
+DarkElements version 5.9 - february 2018
+- several small adjustments
+- updated file style and functions
+
 DarkElements version 5.8 - february 2018
 - please ignore my notification in previous version regarding removal from repository
 - decided not to remove it yet
